# GenshinStory

./: .dockerignore  .gitignore  ADD_NEW_DOMAIN_GUIDE.md  README.md  UI_MIGRATION_REPORT.md  analyze_image_size.py  create_cache.py  docker-compose.yml  generate_markdown.py  netlify.toml  plan.md  pyproject.toml  run_backend.bat  run_frontend.bat  start_web.bat  update_plan.md
game_data_parser/: API_DOCUMENTATION.md  DATA_MODEL_DOCUMENTATION.md  README.md  __init__.py  api.py  dataloader.py  models.py
game_data_parser/database/: books_with_content_id.json
game_data_parser/formatters/: avatar_formatter.py  book_formatter.py  chapter_formatter.py  character_formatter.py  main_quest_formatter.py  (+7 more)
gi_wiki_scraper/: readme.md  run_all_parsers_incremental.py  template_generator.py
giwiki_data_parser/: main.py
hsr_data_parser/: __init__.py  main.py
hsr_wiki_scraper/: central_hub.py  export_html_samples.py  readme.md  run_all_parsers_incremental.py  scrape_links.py  scrape_single_page.py
plan/: ai-first-vertical-architecture-plan.md
scripts/: debug_mission_1040606.py  generate_all_catalog_trees.py  generate_all_content.py  gi_create_cache.py  gi_generate_catalog_tree.py  gi_generate_markdown.py  giwiki_generate_catalog_tree.py  giwiki_generate_markdown.py  hsr_create_cache.py  hsr_generate_catalog_tree.py  hsr_generate_markdown.py  hsrwiki_create_cache.py  hsrwiki_generate_catalog_tree.py  hsrwiki_generate_markdown.py  zzz_create_cache.py  zzz_generate_catalog_tree.py  zzz_generate_markdown.py
zzz_data_parser/: api.py  dataloader.py  key_mapper.py
(+597 files in other folders)
